[package]
name = "delve-derive"
version = "0.1.0"
edition = "2021"
authors = ["@DexterHill0"]
license = "MIT"

description = ""
keywords = ["enum", "string", "macros", "proc-macros", "inspect"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = ""
homepage = "https://github.com/DexterHill0/delve"
repository = "https://github.com/DexterHill0/delve"

[lib]
proc-macro = true
name = "delve_derive"

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }
deluxe = "0.1.0"
