[package]
name = "delve"
version = "0.1.0"
edition = "2021"

description = ""
keywords = ["enum", "string", "macros", "proc-macros", "inspect"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = ""
homepage = "https://github.com/DexterHill0/delve"
repository = "https://github.com/DexterHill0/delve"
readme = "../README.md"

[dependencies]
delve-derive = { path = "../delve-derive", version = "0.1.0" }

[features]
default = ["std"]
std = []