[package]
name = "delve"
version = { workspace = true }
edition = "2021"
license = "MIT"

description = "Provides a number of macros that make working with enums and strings more convenient."
keywords = ["enum", "string", "macros", "proc-macros", "inspect"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = "https://docs.rs/delve"
homepage = "https://github.com/DexterHill0/delve"
repository = "https://github.com/DexterHill0/delve"
readme = "../README.md"

[dependencies]
delve-derive = { optional = true, workspace = true }

[dev-dependencies]
delve-derive = { workspace = true }

[features]
default = ["std"]
std = []
derive = ["dep:delve-derive"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
